--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -38,8 +38,8 @@
 			<!--<li><a href="/about.html">关于</a></li>-->
           </ul>
           <ul class="nav pull-right nav-right">
-            <li><a href="http://weibo.com/201287101" target="_blank"><img src="{{ HOME_PATH }}images/weibo.png" style="width:30px;height:30px;"></a></li>
-            <li><a href="https://github.com/HQingYi" target="_blank"><img src="{{ HOME_PATH }}images/github.png" style="width:30px;height:30px;"></a></li>
+            <li><a href="http://weibo.com/bigdogbin" target="_blank"><img src="{{ HOME_PATH }}images/weibo.png" style="width:30px;height:30px;"></a></li>
+            <li><a href="https://github.com/zhbigbin" target="_blank"><img src="{{ HOME_PATH }}images/github.png" style="width:30px;height:30px;"></a></li>
             <li><a href="/atom.xml" target="_blank"><img src="{{ HOME_PATH }}images/feed.png" style="width:30px;height:30px;"></a></li>
           </ul>
         </div>
@@ -53,7 +53,7 @@
       </div>
 
       <footer class="footer">
-            <p>&copy; 2012 {{ site.author.name }}, Powered by Github</p>
+            <p>&copy; 2014 {{ site.author.name }}, Powered by Github</p>
       </footer>
     </div> <!-- /container -->
     {% include JB/analytics %}
